@@ -1,4 +1,4 @@
-noinst_LTLIBRARIES = libeglib.la
+noinst_LTLIBRARIES = libeglib.la libeglib-static.la
 
 win_files  = \
 	gdate-win32.c gdir-win32.c gfile-win32.c gmisc-win32.c \
@@ -16,6 +16,7 @@ endif
 
 libeglib_la_SOURCES = \
 	eglib-config.h	\
+	eglib-remap.h	\
 	sort.frag.h	\
 	glib.h	     	\
 	garray.c	\
@@ -43,14 +44,19 @@ libeglib_la_SOURCES = \
 	$(os_files)
 
 libeglib_la_CFLAGS = -Wall -D_FORTIFY_SOURCE=2
+libeglib_static_la_SOURCES=$(libeglib_la_SOURCES)
+libeglib_static_la_CFLAGS = $(libeglib_la_CFLAGS)
 
 INCLUDES = -I$(srcdir)
 
 if HOST_WIN32
 libeglib_la_LIBADD = -lm -liconv -lpsapi
 else
-libeglib_la_LIBADD = -lm
+libeglib_la_LIBADD = -lm -ldl
 endif
+
+libeglib_static_la_LIBADD = $(libeglib_la_LIBADD)
+libeglib_static_la_LDFLAGS = -static
 
 MAINTAINERCLEANFILES = Makefile.in
 
